[tool.poetry]
name = "etude-salariale"
version = "0.1.0"
description = ""
authors = ["Thomas Pocreau <thomas.pocreau@blablacar.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
ydata_profiling = "^4.3.2"
numpy = "^1.22.0"
pyqt6 = "^6.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
